src/manipulator/snapshots/annatto__manipulator__link__tests__fail_deserialization_with_bad_query.snap
---
source: src/manipulator/link.rs
expression: link_nodes.err().unwrap()
---
TOML parse error at line 2, column 24
  |
2 |         source_query = "annis:tok @* doc"
  |                        ^^^^^^^^^^^^^^^^^^
Error with
query: `annis:tok @* doc`
error: [0:7-0:9] Unexpected token in query. Expected one of: ID
